Document SNAPSHOT repository setup for Gradle plugin users
Users of the HKJ Gradle plugin with SNAPSHOT versions need the Sonatype
snapshots repository in both pluginManagement (settings.gradle.kts) and
project repositories (build.gradle.kts). This was only documented for
the manual setup path previously.

Also update version default references from "project version" to
"plugin version" to reflect the fix in HKJPlugin.

Add Gradle Plugin Portal publishing for hkj-gradle-plugin

Configure com.gradle.plugin-publish so the plugin is discoverable on the
Gradle Plugin Portal (plugins.gradle.org) without requiring users to add
custom Maven repositories to pluginManagement.

- Add plugin-publish plugin to version catalog and plugin build
- Add website, vcsUrl, and tags metadata for Portal listing
- Add publishPlugins step to CI workflow (release versions only,
  the Portal does not support snapshots)

Requires GRADLE_PUBLISH_KEY and GRADLE_PUBLISH_SECRET secrets to be
configured in the GitHub repository settings.

Fix plugin version default to use plugin's own version, not consuming project's

The HKJ Gradle plugin was defaulting its dependency version to
project.getVersion() which resolves to the *client* project's version
(e.g. 1.0-SNAPSHOT) instead of the HKJ library version. This caused
dependency resolution failures when the client project version didn't
match any published HKJ artifact.

Now generates hkj-version.properties at build time containing the
plugin's published version, and reads it at runtime as the default.